testsuite/poke.pkl/string-multiline-diag-1.pk
/* { dg-do compile } */

/* Normal strings cannot span over multiple lines */

/* { dg-error "" } */ var s = "foo
bar";
